# proto/api/v1/api.v1.pb.go
@@ -24,8 +24,8 @@ const (
 type Container_Status int32
 
 const (
-	Container_UNKNOWN  Container_Status = 0
-	Container_PENDING  Container_Status = 1
+	Container_NEW      Container_Status = 0
+	Container_STARTING Container_Status = 1
 	Container_READY    Container_Status = 2
 	Container_RUNNING  Container_Status = 3
 	Container_STOPPING Container_Status = 4
@@ -34,15 +34,15 @@ const (
 // Enum value maps for Container_Status.
 var (
 	Container_Status_name = map[int32]string{
-		0: "UNKNOWN",
-		1: "PENDING",
+		0: "NEW",
+		1: "STARTING",
 		2: "READY",
 		3: "RUNNING",
 		4: "STOPPING",
 	}
 	Container_Status_value = map[string]int32{
-		"UNKNOWN":  0,
-		"PENDING":  1,
+		"NEW":      0,
+		"STARTING": 1,
 		"READY":    2,
 		"RUNNING":  3,
 		"STOPPING": 4,
@@ -369,7 +369,7 @@ func (x *Container_Info) GetStatus() Container_Status {
 	if x != nil {
 		return x.Status
 	}
-	return Container_UNKNOWN
+	return Container_NEW
 }
 
 type Container_Request struct {
@@ -480,7 +480,7 @@ var file_api_v1_proto_rawDesc = []byte{
 	0x61, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x50, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x52, 0x06, 0x70, 0x61,
 	0x72, 0x61, 0x6d, 0x73, 0x1a, 0x1e, 0x0a, 0x08, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
 	0x12, 0x12, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04,
-	0x64, 0x61, 0x74, 0x61, 0x22, 0x8e, 0x03, 0x0a, 0x09, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e,
+	0x64, 0x61, 0x74, 0x61, 0x22, 0x8b, 0x03, 0x0a, 0x09, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e,
 	0x65, 0x72, 0x1a, 0x32, 0x0a, 0x06, 0x50, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x12, 0x12, 0x0a, 0x04,
 	0x73, 0x65, 0x65, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x65, 0x65, 0x64,
 	0x12, 0x14, 0x0a, 0x05, 0x69, 0x6e, 0x70, 0x75, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52,
@@ -500,33 +500,33 @@ var file_api_v1_proto_rawDesc = []byte{
 	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x35, 0x0a, 0x04, 0x69, 0x6e, 0x66, 0x6f, 0x18, 0x01, 0x20, 0x01,
 	0x28, 0x0b, 0x32, 0x21, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e,
 	0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72,
-	0x2e, 0x49, 0x6e, 0x66, 0x6f, 0x52, 0x04, 0x69, 0x6e, 0x66, 0x6f, 0x22, 0x48, 0x0a, 0x06, 0x53,
-	0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x0b, 0x0a, 0x07, 0x55, 0x4e, 0x4b, 0x4e, 0x4f, 0x57, 0x4e,
-	0x10, 0x00, 0x12, 0x0b, 0x0a, 0x07, 0x50, 0x45, 0x4e, 0x44, 0x49, 0x4e, 0x47, 0x10, 0x01, 0x12,
-	0x09, 0x0a, 0x05, 0x52, 0x45, 0x41, 0x44, 0x59, 0x10, 0x02, 0x12, 0x0b, 0x0a, 0x07, 0x52, 0x55,
-	0x4e, 0x4e, 0x49, 0x4e, 0x47, 0x10, 0x03, 0x12, 0x0c, 0x0a, 0x08, 0x53, 0x54, 0x4f, 0x50, 0x50,
-	0x49, 0x4e, 0x47, 0x10, 0x04, 0x32, 0x9b, 0x02, 0x0a, 0x0d, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b,
-	0x61, 0x74, 0x6f, 0x72, 0x41, 0x50, 0x49, 0x12, 0x8c, 0x01, 0x0a, 0x09, 0x43, 0x61, 0x6c, 0x63,
-	0x75, 0x6c, 0x61, 0x74, 0x65, 0x12, 0x24, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74,
-	0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x6c, 0x63, 0x75, 0x6c,
-	0x61, 0x74, 0x65, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x25, 0x2e, 0x5a, 0x61,
-	0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e,
-	0x43, 0x61, 0x6c, 0x63, 0x75, 0x6c, 0x61, 0x74, 0x65, 0x2e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x32, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2c, 0x12, 0x2a, 0x2f, 0x76, 0x31, 0x2f,
-	0x63, 0x61, 0x6c, 0x63, 0x75, 0x6c, 0x61, 0x74, 0x65, 0x2f, 0x7b, 0x70, 0x61, 0x72, 0x61, 0x6d,
-	0x73, 0x2e, 0x73, 0x65, 0x65, 0x64, 0x7d, 0x2f, 0x7b, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2e,
-	0x69, 0x6e, 0x70, 0x75, 0x74, 0x7d, 0x12, 0x7b, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x43, 0x6f, 0x6e,
-	0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x24, 0x2e, 0x5a, 0x61, 0x70,
-	0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43,
-	0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x25, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50,
-	0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12,
-	0x12, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x2f, 0x7b,
-	0x69, 0x64, 0x7d, 0x42, 0x2f, 0x5a, 0x2d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
-	0x6d, 0x2f, 0x64, 0x65, 0x6e, 0x6b, 0x6f, 0x72, 0x65, 0x6e, 0x2f, 0x6d, 0x69, 0x2d, 0x6c, 0x61,
-	0x62, 0x73, 0x2d, 0x74, 0x65, 0x73, 0x74, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x2e, 0x49, 0x6e, 0x66, 0x6f, 0x52, 0x04, 0x69, 0x6e, 0x66, 0x6f, 0x22, 0x45, 0x0a, 0x06, 0x53,
+	0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x07, 0x0a, 0x03, 0x4e, 0x45, 0x57, 0x10, 0x00, 0x12, 0x0c,
+	0x0a, 0x08, 0x53, 0x54, 0x41, 0x52, 0x54, 0x49, 0x4e, 0x47, 0x10, 0x01, 0x12, 0x09, 0x0a, 0x05,
+	0x52, 0x45, 0x41, 0x44, 0x59, 0x10, 0x02, 0x12, 0x0b, 0x0a, 0x07, 0x52, 0x55, 0x4e, 0x4e, 0x49,
+	0x4e, 0x47, 0x10, 0x03, 0x12, 0x0c, 0x0a, 0x08, 0x53, 0x54, 0x4f, 0x50, 0x50, 0x49, 0x4e, 0x47,
+	0x10, 0x04, 0x32, 0x9b, 0x02, 0x0a, 0x0d, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f,
+	0x72, 0x41, 0x50, 0x49, 0x12, 0x8c, 0x01, 0x0a, 0x09, 0x43, 0x61, 0x6c, 0x63, 0x75, 0x6c, 0x61,
+	0x74, 0x65, 0x12, 0x24, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e,
+	0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x6c, 0x63, 0x75, 0x6c, 0x61, 0x74, 0x65,
+	0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x25, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73,
+	0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x6c,
+	0x63, 0x75, 0x6c, 0x61, 0x74, 0x65, 0x2e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
+	0x32, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2c, 0x12, 0x2a, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x61, 0x6c,
+	0x63, 0x75, 0x6c, 0x61, 0x74, 0x65, 0x2f, 0x7b, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2e, 0x73,
+	0x65, 0x65, 0x64, 0x7d, 0x2f, 0x7b, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2e, 0x69, 0x6e, 0x70,
+	0x75, 0x74, 0x7d, 0x12, 0x7b, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69,
+	0x6e, 0x65, 0x72, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x24, 0x2e, 0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b,
+	0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6e, 0x74,
+	0x61, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x25, 0x2e,
+	0x5a, 0x61, 0x70, 0x75, 0x73, 0x6b, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x41, 0x50, 0x49, 0x2e, 0x76,
+	0x31, 0x2e, 0x43, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x76,
+	0x31, 0x2f, 0x63, 0x6f, 0x6e, 0x74, 0x61, 0x69, 0x6e, 0x65, 0x72, 0x2f, 0x7b, 0x69, 0x64, 0x7d,
+	0x42, 0x2f, 0x5a, 0x2d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64,
+	0x65, 0x6e, 0x6b, 0x6f, 0x72, 0x65, 0x6e, 0x2f, 0x6d, 0x69, 0x2d, 0x6c, 0x61, 0x62, 0x73, 0x2d,
+	0x74, 0x65, 0x73, 0x74, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76,
+	0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
